# test

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: entities.py
backend/app/schemas/: dto.py
backend/app/services/: archive.py  telegram.py
backend/tests/: test_api.py  test_archive.py
frontend/: nginx.conf  package.json  tsconfig.json
frontend/src/: main.ts
src/teldwon/: cli.py  config.py  downloader.py
