[project]
name = "telegram-archive-downloader-pro"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["fastapi", "uvicorn[standard]", "sqlalchemy>=2", "psycopg[binary]", "pydantic-settings", "python-jose[cryptography]", "passlib[bcrypt]", "cryptography", "telethon", "redis", "apscheduler", "python-multipart", "aiofiles"]
[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "pytest-cov", "ruff", "flake8", "mypy", "types-passlib", "types-python-jose"]
[tool.ruff]
line-length = 100
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
